<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jadaptive</groupId>
	<artifactId>jadaptive</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<url>https://jadaptive.com</url>
	<packaging>pom</packaging>
	<name>JADAPTIVE - Group POM</name>
	<description>Dynamic REST API Builder</description>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
	
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A commercial-friendly OSS license</comments>
		</license>
	</licenses>

	<scm>
		<url>http://github.com/ludup/jadaptive</url>
		<connection>scm:git:https://github.com/ludup/jadaptive</connection>
		<developerConnection>scm:git:https://github.com/ludup/jadaptive</developerConnection>
	</scm>

	<developers>
		<developer>
			<id>lee</id>
			<name>Lee David Painter</name>
			<email>lee@jadaptive.com</email>
		</developer>
	</developers>

	<modules>
		<module>jadaptive-api</module>
		<module>jadaptive-boot</module>
		<module>plugins</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.1.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<properties>
		<start-class>com.jadaptive.app.Application</start-class>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
		<pf4j.version>3.3.0-SNAPSHOT</pf4j.version>
		<javadoc.disabled>true</javadoc.disabled>
		<deploy.disabled>true</deploy.disabled>
		<source.disabled>true</source.disabled>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<build>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<annotationProcessors>
						<annotationProcessor>org.pf4j.processor.ExtensionAnnotationProcessor</annotationProcessor>
					</annotationProcessors>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.eclipse.m2e</groupId>
        <artifactId>lifecycle-mapping</artifactId>
        <version>1.0.0</version>
        <configuration>
          <lifecycleMappingMetadata>
            <pluginExecutions>
              <pluginExecution>
                <pluginExecutionFilter>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-enforcer-plugin</artifactId>
                  <versionRange>[1.0.0,)</versionRange>
                  <goals>
                    <goal>enforce</goal>
                  </goals>
                </pluginExecutionFilter>
                <action>
                  <ignore />
                </action>
              </pluginExecution>
            </pluginExecutions>
          </lifecycleMappingMetadata>
        </configuration>
      </plugin>
    </plugins>
  </pluginManagement>
	</build>

</project>
